--- a/computations.qmd
+++ b/computations.qmd
@@ -5,6 +5,7 @@ format:
     html: 
         code-fold: true
         self-contained: true
+        embed-resources: true
 fig-height: 3.5
 fig-width: 6
 echo: false
